Fix wrong background in light theme

--- a/src/style/markdown.less
+++ b/src/style/markdown.less
@@ -342,6 +342,7 @@
 		padding: 0;
 		white-space: pre;
 		border: none;
+		background: transparent;
 	}
 
 	.highlight pre {
